--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <title>{{ page.title }}</title>
+      <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+      <!-- syntax highlighting CSS -->
+      <link rel="stylesheet" href="/css/syntax.css">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+      <!-- Custom CSS -->
+      <link rel="stylesheet" href="/public/css/app.css">
 
-    </head>
-    <body>
-
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-            </div>
-
-                {{ content }}
-
-            <div class="footer">
-              <div class="contact">
-                <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> <!-- /container -->
-
-    </body>
+  </head>
+  <body>
+    <div class="header">
+      <div class="header-container">
+        <h1 class="site-title">这里只写废话</h1>
+        <ul class="site-menu">
+          <li>HOME</li>
+          <li>GITHUB</li>
+          <li>ABOUT</li>
+        </ul>
+        <div class="site-owner">
+          <ul class="owner-info">
+            <li class="owner-name">Anson Chan</li>
+            <li class="owner-position">at Hangzhou</li>
+            <li class="owner-weibo"><a href="http://weibo.com/anson0370" target="_blank">@叫你不戴帽子</a></li>
+            <li class="owner-twitter"><a href="https://twitter.com/anson0370" target="_blank">@anson0370</a></li>
+          </ul>
+          <img src="/public/img/avatar.png" alt="" class="owner-avatar"><b></b>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      {{ content }}
+    </div>
+    <div class="footer"></div>
+  </body>
 </html>
