--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
       <div class="header-container">
         <h1 class="site-title">这里只写废话</h1>
         <ul class="site-menu">
-          <li><a href="/">HOME</a></li>
-          <li><a href="https://github.com/anson0370" target="_blank">GITHUB</a></li>
-          <li><a href="/about">ABOUT</a></li>
+          <li><a href="/"><b></b><span>HOME</span></a></li>
+          <li><a href="https://github.com/anson0370"><b></b><span>GITHUB</span></a></li>
+          <li><a href="/about"><b></b><span>ABOUT</span></a></li>
         </ul>
         <div class="site-owner">
           <ul class="owner-info">
