--- a/_src/styles/post.scss
+++ b/_src/styles/post.scss
@@ -1,10 +1,13 @@
 @import "common";
 
 $post-padding: 40px;
+$post-border-color: darken($color-rule-2, 20%);
+// $post-border-color: $color-rule-4;
+$post-code-back: $color-rule-2;
 
 .post {
   background-color: white;
-  border: 1px solid #bbb;
+  border: 1px solid $post-border-color;
   border-bottom-width: 2px;
   z-index: 11;
   @include border-radius(5px);
@@ -12,20 +15,23 @@ $post-padding: 40px;
   padding: 20px $post-padding $post-padding;
 
   .post-title {
+    $start-color: lighten($color-rule-5, 5%);
+    $end-color: darken($color-rule-5, 5%);
+
     position: relative;
     width: 100%;
     padding: 30px;
     left: -55px;
-    background-color: #999;
-    @include background(linear-gradient(#999, #666));
+    background-color: $end-color;
+    @include background(linear-gradient($start-color, $end-color));
     @include border-radius(0 5px 5px 0);
-    @include box-shadow(inset 0 1px rgba(white, 0.3), inset 0 -1px rgba(black, 0.6));
+    @include box-shadow(inset 0 1px rgba(white, 0.3), inset 0 -1px rgba(black, 0.3));
 
     &:before {
       content: "";
       display: block;
       position: absolute;
-      border-color: transparent #666 #666 transparent;
+      border-color: transparent $end-color $end-color transparent;
       border-style: solid;
       border-width: 4px 7px;
       top: -8px;
@@ -34,19 +40,19 @@ $post-padding: 40px;
 
     > h2 {
       display: inline;
-      color: white;
+      color: $light-font-color;
       font-size: 30px;
       font-weight: bold;
       @include white-text-shadow;
 
       > a {
-        color: white;
+        color: $light-font-color;
       }
     }
 
     > span {
       margin-left: 30px;
-      color: white;
+      color: $light-font-color;
       font-size: 16px;
       @include white-text-shadow;
     }
@@ -62,8 +68,8 @@ $post-padding: 40px;
   }
 
   code {
-    border: 1px solid #bbb;
-    background-color: #ececec;
+    border: 1px solid $post-border-color;
+    background-color: $post-code-back;
     padding: 2px 5px;
     @include border-radius(2px);
   }
@@ -72,9 +78,9 @@ $post-padding: 40px;
     width: $global-width - ($post-padding * 2) - 2px;
     margin-left: -$post-padding;
     padding: 20px $post-padding;
-    background-color: #ececec;
-    border-top: 1px solid #bbb;
-    border-bottom: 1px solid #bbb;
+    background-color: $post-code-back;
+    border-top: 1px solid $post-border-color;
+    border-bottom: 1px solid $post-border-color;
 
     code {
       border: none;
@@ -84,6 +90,7 @@ $post-padding: 40px;
   }
 
   a {
-    color: #0086B3;
+    // color: #0086B3;
+    color: $color-rule-4;
   }
 }
