add font awesome & google web font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
       <title>{{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
 
+      <!-- font awesome -->
+      <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
       <!-- syntax highlighting CSS -->
       <link rel="stylesheet" href="/css/syntax.css">
 
@@ -18,16 +21,16 @@
       <div class="header-container">
         <h1 class="site-title">这里只写废话</h1>
         <ul class="site-menu">
-          <li><a href="/"><b></b><span>HOME</span></a></li>
-          <li><a href="https://github.com/anson0370" target="_blank"><b></b><span>GITHUB</span></a></li>
-          <li><a href="/about"><b></b><span>ABOUT</span></a></li>
+          <li><a href="/"><b></b><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
+          <li><a href="https://github.com/anson0370" target="_blank"><b></b><span><i class="icon-github icon-large"></i>&nbsp;GITHUB</span></a></li>
+          <li><a href="/about"><b></b><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
         </ul>
         <div class="site-owner">
           <ul class="owner-info">
-            <li class="owner-name">Anson Chan</li>
-            <li class="owner-position">at Hangzhou</li>
-            <li class="owner-weibo"><a href="http://weibo.com/anson0370" target="_blank">@叫你不戴帽子</a></li>
-            <li class="owner-twitter"><a href="https://twitter.com/anson0370" target="_blank">@anson0370</a></li>
+            <li class="owner-name">Anson Chan&nbsp;<i class="icon-user"></i></li>
+            <li class="owner-position">Hangzhou&nbsp;<i class="icon-map-marker"></i></li>
+            <li class="owner-weibo"><a href="http://weibo.com/anson0370" target="_blank">@叫你不戴帽子</a>&nbsp;<i class="icon-weibo"></i></li>
+            <li class="owner-twitter"><a href="https://twitter.com/anson0370" target="_blank">@anson0370</a>&nbsp;<i class="icon-twitter"></i></li>
           </ul>
           <img src="/public/img/avatar.png" alt="" class="owner-avatar"><b></b>
         </div>
