--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,23 @@
       </div>
     </div>
     <div class="content">
-      {{ content }}
+      <div class="content-container">
+        {{ content }}
+      </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+      <div class="footer-container">
+        <span class="powerd">
+          <i class="icon-wrench"></i>&nbsp;Powered by
+          <ul class="powerd-list">
+            <li><a href="https://help.github.com/categories/20/articles" target="_blank">Pages</a></li>
+            <li><a href="http://jekyllrb.com/" target="_blank">Jekyll</a></li>
+            <li><a href="https://github.com/SaitoWu/linner" target="_blank">Linner</a></li>
+            <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">FontAwesome</a></li>
+            <li><a href="http://www.google.com/fonts/" target="_blank">WebFonts</a></li>
+          </ul>
+        </span>
+      </div>
+    </div>
   </body>
 </html>
