--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
             <li><a href="https://github.com/SaitoWu/linner" target="_blank">Linner</a></li>
             <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">FontAwesome</a></li>
             <li><a href="http://www.google.com/fonts/" target="_blank">WebFonts</a></li>
+            <li><a href="http://disqus.com/" target="_blank">DISQUS</a></li>
           </ul>
         </span>
       </div>
