--- a/public/css/app.css
+++ b/public/css/app.css
@@ -291,7 +291,22 @@ pre, code {
 .header-container .site-owner .owner-info a:hover {
   color: black;
 }
-/* line 7, _src/styles/post.scss */
+/* line 3, _src/styles/pagination.scss */
+#pagination {
+  font-size: 14px;
+  padding-left: 10px;
+}
+/* line 8, _src/styles/pagination.scss */
+#pagination > ol > li {
+  display: inline-block;
+  padding: 0 5px;
+}
+/* line 8, _src/styles/post.scss */
+.posts > li {
+  margin: 40px 0;
+}
+
+/* line 13, _src/styles/post.scss */
 .post {
   background-color: white;
   border: 1px solid #b9b9b9;
@@ -304,7 +319,7 @@ pre, code {
   border-radius: 5px;
   padding: 20px 40px;
 }
-/* line 16, _src/styles/post.scss */
+/* line 22, _src/styles/post.scss */
 .post .post-title {
   position: relative;
   width: 100%;
@@ -325,7 +340,7 @@ pre, code {
   -moz-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 -1px rgba(0, 0, 0, 0.3);
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 -1px rgba(0, 0, 0, 0.3);
 }
-/* line 29, _src/styles/post.scss */
+/* line 35, _src/styles/post.scss */
 .post .post-title:before {
   content: "";
   display: block;
@@ -336,7 +351,7 @@ pre, code {
   top: -8px;
   left: 0;
 }
-/* line 40, _src/styles/post.scss */
+/* line 46, _src/styles/post.scss */
 .post .post-title > h2 {
   display: inline;
   color: white;
@@ -344,28 +359,28 @@ pre, code {
   font-weight: bold;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
 }
-/* line 47, _src/styles/post.scss */
+/* line 53, _src/styles/post.scss */
 .post .post-title > h2 > a {
   color: white;
 }
-/* line 52, _src/styles/post.scss */
+/* line 58, _src/styles/post.scss */
 .post .post-title > span {
   margin-left: 30px;
   color: white;
   font-size: 16px;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
 }
-/* line 60, _src/styles/post.scss */
+/* line 66, _src/styles/post.scss */
 .post .post-content {
   margin-top: 40px;
   line-height: 2em;
 }
 
-/* line 68, _src/styles/post.scss */
+/* line 74, _src/styles/post.scss */
 .post p {
   margin: 20px 0;
 }
-/* line 72, _src/styles/post.scss */
+/* line 78, _src/styles/post.scss */
 .post code {
   border: 1px solid #b9b9b9;
   background-color: #ececec;
@@ -376,7 +391,7 @@ pre, code {
   -o-border-radius: 2px;
   border-radius: 2px;
 }
-/* line 79, _src/styles/post.scss */
+/* line 85, _src/styles/post.scss */
 .post .highlight {
   width: 918px;
   margin-left: -40px;
@@ -388,7 +403,7 @@ pre, code {
   -moz-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5);
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.5);
 }
-/* line 88, _src/styles/post.scss */
+/* line 94, _src/styles/post.scss */
 .post .highlight code {
   border: none;
   background: none;
