bugfix for pagination & add style for markdown produce

--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -3,10 +3,10 @@
   <ol>
     {% if paginator.previous_page %}
     {% if paginator.previous_page > 1 %}
-      {% capture page_url %}page/{{ paginator.previous_page }}{% endcapture %}
+      {% capture previous_url %}page/{{ paginator.previous_page }}{% endcapture %}
     {% endif %}
     <li>
-      <a href="/{{ page_url }}" title="Go to previous page">
+      <a href="/{{ previous_url }}" title="Go to previous page">
         <i class="icon-double-angle-left"></i>
       </a>
     </li>
