--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     <h2>{{ page.title }}</h2>
     <span>{{ page.date | date_to_string }}</span>
   </div>
-  <div class="post-content">
+  <div class="post-content md">
     {{ content }}
   </div>
 </div>
