--- a/_src/styles/post.scss
+++ b/_src/styles/post.scss
@@ -5,7 +5,7 @@ $post-border-color: darken($color-rule-2, 20%);
 $post-code-back: $color-rule-2;
 
 .posts {
-  > li {
+  > .post {
     margin: 40px 0;
   }
 }
@@ -70,18 +70,7 @@ $post-code-back: $color-rule-2;
 }
 
 // post content style
-.post {
-  p {
-    margin: 20px 0;
-  }
-
-  code {
-    border: 1px solid $post-border-color;
-    background-color: $post-code-back;
-    padding: 2px 5px;
-    @include border-radius(2px);
-  }
-
+.md.post-content {
   .highlight {
     width: $global-width - ($post-padding * 2) - 2px;
     margin-left: -$post-padding;
@@ -90,11 +79,5 @@ $post-code-back: $color-rule-2;
     border-top: 1px solid $post-border-color;
     border-bottom: 1px solid $post-border-color;
     @include box-shadow(inset 0 1px rgba(white, 0.5));
-
-    code {
-      border: none;
-      background: none;
-      padding: 0;
-    }
   }
 }
