--- a/_src/styles/global.scss
+++ b/_src/styles/global.scss
@@ -2,14 +2,15 @@
 @import "common";
 
 // @import url(http://fonts.googleapis.com/css?family=Fauna+One);
-@import url(http://fonts.googleapis.com/css?family=Maven+Pro);
+// @import url(http://fonts.googleapis.com/css?family=Maven+Pro);
+@import url(http://fonts.googleapis.com/css?family=Arvo);
 // @import url(http://fonts.googleapis.com/css?family=Voces);
 
 body {
   background-color: $color-rule-2;
   color: $font-color;
   font-size: 12px;
-  font-family: 'Maven Pro', 'Hiragino Sans GB', 微软雅黑, 黑体, sans-serif;
+  font-family: 'Arvo', 'Hiragino Sans GB', 微软雅黑, 黑体, sans-serif;
 }
 
 a {
