--- a/_src/styles/markdown.scss
+++ b/_src/styles/markdown.scss
@@ -4,6 +4,31 @@ $code-border: darken($color-rule-2, 20%);
 $code-back: $color-rule-2;
 
 .md {
+  h1, h2, h3, h4, h5 {
+    margin: 1.5em 0;
+  }
+
+  h1 {
+    font-size: 2.5em;
+  }
+
+  h2 {
+    font-size: 2em;
+  }
+
+  h3 {
+    font-size: 1.5em;
+  }
+
+  h4 {
+    font-size: 1.2em;
+  }
+
+  h5 {
+    font-size: 1em;
+    font-weight: bold;
+  }
+
   p {
     margin: 20px 0;
   }
