use the flatui cloud color for background-color

--- a/_src/styles/_common.scss
+++ b/_src/styles/_common.scss
@@ -14,7 +14,7 @@ $global-width: 1000px;
 // $color-rule-5: #8E001C;
 
 $color-rule-1: #444;
-$color-rule-2: #ececec;
+$color-rule-2: #ecf0f1;
 $color-rule-3: white;
 $color-rule-4: #4BB5C1;
 $color-rule-5: #A9CC66;
